--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "axios": "^1.13.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
